--- a/src/app/beans/beans.page.scss
+++ b/src/app/beans/beans.page.scss
@@ -1,9 +1,5 @@
 :host {
-  ion-icon.black {
-    color: #282013;
-  }
-
-  ion-icon.active {
-    color: var(--ion-color-accent);
+  .container {
+    display: flex;
   }
 }
