--- a/src/app/brew-parameter/manage-parameter/manage-parameter.component.html
+++ b/src/app/brew-parameter/manage-parameter/manage-parameter.component.html
@@ -11,6 +11,6 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding">
+<ion-content>
   <manage-custom-parameter [data]="settings"></manage-custom-parameter>
 </ion-content>
