--- a/src/app/brew-parameter/sort-parameter/sort-parameter.component.html
+++ b/src/app/brew-parameter/sort-parameter/sort-parameter.component.html
@@ -11,8 +11,6 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding">
+<ion-content>
   <sort-custom-parameter [data]="settings"></sort-custom-parameter>
-
-
 </ion-content>
