--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-tabs>
 
-    <ion-tab-bar slot="bottom">
+    <ion-tab-bar slot="bottom" style="box-shadow: 0px -2px 10px #00000021;padding-top: 12px;padding-bottom: 8px;">
       <ion-tab-button tab="dashboard" tappable>
         <ion-icon class="menu-icon" name="beanconqueror-home"></ion-icon>
         <ion-label>{{"NAV_HOME" | translate}}</ion-label>
