--- a/src/app/statistic/statistic.page.html
+++ b/src/app/statistic/statistic.page.html
@@ -24,7 +24,7 @@
   <ion-row>
     <ion-col class="ion-text-center" size="6">
       <ion-card class="small-card" style="height: 100%;">
-        <ion-card-header class="custom-background-medium" style="font-size: 2em;">{{uiStatistic.getMillsCount()}}
+        <ion-card-header class="card-background" style="font-size: 2em;">{{uiStatistic.getMillsCount()}}
         </ion-card-header>
         <ion-card-content>
           {{"NAV_MILL" | translate}}
@@ -33,7 +33,7 @@
     </ion-col>
     <ion-col class="ion-text-center" size="6">
       <ion-card class="small-card" style="height: 100%;">
-        <ion-card-header class="custom-background-medium" style="font-size: 2em;">{{uiStatistic.getPreparationsCount()}}
+        <ion-card-header class="card-background" style="font-size: 2em;">{{uiStatistic.getPreparationsCount()}}
         </ion-card-header>
         <ion-card-content>
           {{"PAGE_STATISTICS_DIFFERENT_PREPARATION_METHOD" | translate}}
@@ -42,7 +42,7 @@
     </ion-col>
     <ion-col class="ion-text-center" size="6">
       <ion-card class="small-card" style="height: 100%;">
-        <ion-card-header class="custom-background-medium" style="font-size: 2em;">{{uiStatistic.getTotalGround() | number : '.0-2'}}&nbsp;kg
+        <ion-card-header class="card-background" style="font-size: 2em;">{{uiStatistic.getTotalGround() | number : '.0-2'}}&nbsp;kg
         </ion-card-header>
         <ion-card-content>
           {{"PAGE_STATISTICS_TOTAL_GROUND_BEANS" | translate}}
@@ -51,7 +51,7 @@
     </ion-col>
     <ion-col class="ion-text-center" size="6">
       <ion-card class="small-card" style="height: 100%;">
-        <ion-card-header class="custom-background-medium"
+        <ion-card-header class="card-background"
                          style="font-size: 2em;">{{uiStatistic.getSpentMoneyForCoffeeBeans() | number : '.0-2'}}&nbsp;€
         </ion-card-header>
         <ion-card-content>
@@ -61,7 +61,7 @@
     </ion-col>
     <ion-col class="ion-text-center" size="6">
       <ion-card class="small-card" style="height: 100%;">
-        <ion-card-header class="custom-background-medium" style="font-size: 2em;">{{uiStatistic.getBrewsDrunk() | number : '.0'}}
+        <ion-card-header class="card-background" style="font-size: 2em;">{{uiStatistic.getBrewsDrunk() | number : '.0'}}
         </ion-card-header>
         <ion-card-content>
           {{"PAGE_STATISTICS_DRUNKEN_BREWS" | translate}}
@@ -70,7 +70,7 @@
     </ion-col>
     <ion-col class="ion-text-center" size="6">
       <ion-card class="small-card" style="height: 100%;">
-        <ion-card-header class="custom-background-medium" style="font-size: 2em;">{{uiStatistic.getTotalDrunk() | number : '.0-2'}}
+        <ion-card-header class="card-background" style="font-size: 2em;">{{uiStatistic.getTotalDrunk() | number : '.0-2'}}
         </ion-card-header>
         <ion-card-content>
           {{"PAGE_STATISTICS_DRUNKEN_QUANTITY" | translate}} (kg/l)
