--- a/src/app/statistic/statistic.page.scss
+++ b/src/app/statistic/statistic.page.scss
@@ -2,4 +2,8 @@
   ion-card-header {
     padding: 8px;
   }
+  .card-background {
+    background-color: var(--ion-color-inactive) !important;
+  }
+
 }
