--- a/src/components/bean-information/bean-information.component.scss
+++ b/src/components/bean-information/bean-information.component.scss
@@ -1,6 +1,8 @@
 :host {
   ion-card {
     ion-card-content {
+      padding: 8px;
+      padding-bottom: 0px;
       padding-top: var(--padding-top);
     }
   }
@@ -10,7 +12,12 @@
     position: absolute;
     top: -20px;
     right: -20px;
-    min-height: 45px;
+    min-height: 20px;
+    ion-icon{
+      font-size: 18px!important;
+      width: 18px!important;
+      height: 18px!important;
+    }
   }
 
   .no-ion-col-vertical-padding {
@@ -20,6 +27,9 @@
     }
 
   }
-
+  ion-text {
+    position: relative;
+    top: -5px;
+  }
 
 }
