--- a/src/components/brew-dashboard-information/brew-dashboard-information.component.html
+++ b/src/components/brew-dashboard-information/brew-dashboard-information.component.html
@@ -1,7 +1,7 @@
 <ion-card class="long-card">
   <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col size="2">
+      <ion-col size="3" size-xs="4">
 
           <div class="dashboard-time-center">
             <div class="ion-text-bold font-size-18">
@@ -12,13 +12,9 @@
             </div>
 
           </div>
-
-
-      </ion-col>
-      <ion-col size="1">
         <div class="vr"></div>
       </ion-col>
-      <ion-col size="9" style="padding-left:16px;">
+      <ion-col size="9" size-xs="8" style="padding-left:16px;">
         <ion-card class="ion-no-padding ion-no-margin long-card"
                   style="padding-top:8px;padding-right:8px;padding-bottom:8px;">
           <ion-card-content>
