--- a/src/components/parameter/sort-custom-parameter/sort-custom-parameter.component.html
+++ b/src/components/parameter/sort-custom-parameter/sort-custom-parameter.component.html
@@ -1,5 +1,5 @@
 <ion-card class="ion-padding">
-  <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_BEFORE" | translate  }}</ion-title>
+  <ion-title class="ion-no-padding">{{"SORT_PARAMETERS_BEFORE" | translate  }}</ion-title>
   <ion-reorder-group (ionItemReorder)="reorder_brew($event,'before')" disabled="false">
     <ion-item *ngFor="let index of brewOrdersBefore; let last = last" lines="{{last?'none':''}}" tappable>
       <ion-label>
@@ -10,8 +10,8 @@
   </ion-reorder-group>
 </ion-card>
 
-<ion-card class="ion-padding">
-  <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_MEANWHILE" | translate  }}</ion-title>
+<ion-card class="ion-padding" style="margin-top:30px;">
+  <ion-title class="ion-no-padding">{{"SORT_PARAMETERS_MEANWHILE" | translate  }}</ion-title>
   <ion-reorder-group (ionItemReorder)="reorder_brew($event,'while')" disabled="false">
     <ion-item *ngFor="let index of brewOrdersWhile; let last = last" lines="{{last?'none':''}}" tappable>
       <ion-label>
@@ -22,8 +22,8 @@
   </ion-reorder-group>
 </ion-card>
 
-<ion-card class="ion-padding">
-  <ion-title class="ion-padding-top">{{"SORT_PARAMETERS_AFTER" | translate  }}</ion-title>
+<ion-card class="ion-padding" style="margin-top:30px;">
+  <ion-title class="ion-no-padding">{{"SORT_PARAMETERS_AFTER" | translate  }}</ion-title>
   <ion-reorder-group (ionItemReorder)="reorder_brew($event,'after')" disabled="false">
     <ion-item *ngFor="let index of brewOrdersAfter; let last = last" lines="{{last?'none':''}}" tappable>
       <ion-label>
