--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -85,17 +85,15 @@
 
   --beanconqueror-highlight-color-item: #AE9F87;
   --beanconqueror-icon-color: #AE9F87;
-  --beanconqueror-card-highlight: #9F8C6F;
 
   --beanconqueror-background-highlight-color: #FFACAB;
 
-
   /**https://ionicframework.com/docs/theming/colors**/
-  --ion-color-accent: #AE9F87A2;
+  --ion-color-accent: #CDC2AC;
   --ion-color-accent-rgb: 184, 130, 101;
   --ion-color-accent-contrast: #FFFFFF;
   --ion-color-accent-contrast-rgb: 255, 255, 255;
-  --ion-color-accent-shade: #AE9F87A2;
+  --ion-color-accent-shade: #CDC2AC;
   --ion-color-accent-tint: #FFFFFF;
 
 
