--- a/src/app/brew-parameter/default-parameter/default-parameter.component.html
+++ b/src/app/brew-parameter/default-parameter/default-parameter.component.html
@@ -11,7 +11,7 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding">
+<ion-content>
   <default-custom-parameter [data]="settings">
 
   </default-custom-parameter>
