--- a/src/components/bean-information/bean-information.component.html
+++ b/src/components/bean-information/bean-information.component.html
@@ -1,6 +1,6 @@
 <ion-card class="long-card">
   <ion-card-content class="no-ion-col-vertical-padding ion-padding-top">
-    <ion-grid>
+    <ion-grid class="no-padding-bottom">
       <ion-row>
         <ion-col size="8"><div class="ion-no-padding font-size-20 ion-title">{{bean.name}}</div></ion-col>
         <ion-col size="3">
