--- a/src/components/brew-dashboard-information/brew-dashboard-information.component.scss
+++ b/src/components/brew-dashboard-information/brew-dashboard-information.component.scss
@@ -1,15 +1,23 @@
 :host {
   .vr {
     border-right: 2px solid var(--ion-color-accent-secondary);
-    height: 75%;
+    height: 60%;
     position: absolute;
-    top: 12.5%;
-    bottom: 12.5%;
-    width:10%;
+    top: 20%;
+    bottom: 20%;
+    right: 0px;
   }
-  @media (max-width: 400px) {
-    .vr {
-      width:50%;
+
+  // Overwrite
+  .button-top-absolute {
+    position: absolute;
+    top: -10px;
+    right: -20px;
+    min-height: 20px;
+    ion-icon{
+      font-size: 18px!important;
+      width: 18px!important;
+      height: 18px!important;
     }
   }
 
