--- a/src/components/mill-information-card/mill-information-card.component.scss
+++ b/src/components/mill-information-card/mill-information-card.component.scss
@@ -1,21 +1,35 @@
 :host {
   ion-card {
     ion-card-content {
+      padding: 8px;
+      padding-bottom: var(--padding-bottom);
       padding-top: var(--padding-top);
     }
   }
+
+  // Overwrite
   .button-top-absolute {
     position: absolute;
     top: -20px;
     right: -20px;
-    min-height: 45px;
+    min-height: 20px;
+    ion-icon{
+      font-size: 18px!important;
+      width: 18px!important;
+      height: 18px!important;
+    }
   }
+
   .no-ion-col-vertical-padding {
     ion-col {
       padding-top: 0px !important;
       padding-bottom: 0px !important;
     }
 
+  }
+  ion-text {
+    position: relative;
+    top: -5px;
   }
 
 
