--- a/src/popover/welcome-popover/welcome-popover.component.html
+++ b/src/popover/welcome-popover/welcome-popover.component.html
@@ -12,27 +12,27 @@
 </ion-header>
 <ion-content>
 
-  <div *ngIf="slide === 1" class="ion-text-center" style="margin-top:35px;position:relative;">
-    <ion-icon class="icon-64" name="beanconqueror-welcome-start"></ion-icon>
+  <div *ngIf="slide === 1" class="ion-text-center" style="padding-top:35px;height:100%;position:relative;">
+    <ion-icon name="beanconqueror-welcome-start"></ion-icon>
   </div>
-  <div *ngIf="slide === 2" class="ion-text-center" style="margin-top:20px;position:relative;">
-    <ion-icon class="icon-64" name="beanconqueror-welcome-bean-package"></ion-icon>
+  <div *ngIf="slide === 2" class="ion-text-center" style="padding-top:35px;height:100%;position:relative;">
+    <ion-icon name="beanconqueror-welcome-bean-package"></ion-icon>
   </div>
-  <div *ngIf="slide === 3" class="ion-text-center" style="margin-top:35px;position:relative;">
-    <ion-icon class="icon-64" name="beanconqueror-welcome-preparation"></ion-icon>
+  <div *ngIf="slide === 3" class="ion-text-center" style="padding-top:35px;height:100%;position:relative;">
+    <ion-icon name="beanconqueror-welcome-preparation"></ion-icon>
   </div>
-  <div *ngIf="slide === 4" class="ion-text-center" style="margin-top:35px;position:relative;">
-    <ion-icon class="icon-64" name="beanconqueror-welcome-grinder"></ion-icon>
+  <div *ngIf="slide === 4" class="ion-text-center" style="padding-top:35px;height:100%;position:relative;">
+    <ion-icon name="beanconqueror-welcome-grinder"></ion-icon>
   </div>
-  <div *ngIf="slide === 5" class="ion-text-center" style="margin-top: 10px;margin-left: 20px;position:relative;">
-    <ion-icon class="icon-64" name="beanconqueror-welcome-start-last-page"></ion-icon>
+  <div *ngIf="slide === 5" class="ion-text-center" style="padding-top:35px;height:100%;position:relative;">
+    <ion-icon name="beanconqueror-welcome-start-last-page"></ion-icon>
   </div>
 </ion-content>
 <ion-footer class="ion-no-border">
   <ion-card>
     <ion-slides #slider [options]="slideOpts" pager="true">
       <ion-slide>
-        <div class="ion-padding-top">
+        <div>
           <div class="welcome-content-text">
             <ion-title>
               {{"WELCOME_PAGE_ACTIVATE_GOOGLE_ANALYTICS_TITLE" | translate}}
@@ -42,13 +42,15 @@
             </div>
           </div>
           <ion-row class="ion-padding-top">
-            <ion-col size="6">
-              <ion-button (click)="activeGoogleAnalytics(false)" color="accent" expand="block" tappable
-                          fill="outline">{{"DO_NOT_ACTIVE" | translate}}</ion-button>
-            </ion-col>
-            <ion-col size="6">
-              <ion-button (click)="activeGoogleAnalytics(true)" color="accent" tappable
+            <ion-col size="12">
+              <ion-button (click)="activeGoogleAnalytics(true)" color="accent"
                           expand="block">{{"ACTIVATE" | translate}}</ion-button>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">
+              <ion-button (click)="activeGoogleAnalytics(false)" color="dark" expand="block"
+                          fill="clear">{{"SKIP" | translate}}</ion-button>
             </ion-col>
           </ion-row>
         </div>
@@ -138,7 +140,7 @@
           <ion-row class="ion-padding-top">
             <ion-col size="12">
               <ion-button (click)="finish()" class="big-icon-only" fill="clear" tappable>
-                <ion-icon class="rotate-icon-180" name="beanconqueror-back" slot="icon-only"></ion-icon>
+                <ion-icon  name="beanconqueror-next" slot="icon-only"></ion-icon>
               </ion-button>
             </ion-col>
           </ion-row>
